--- a/Dn6Poc.TravalApi/appsettings.json
+++ b/Dn6Poc.TravalApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Application": {
+    "Name": "TravelApi",
+    "Version": "1.0.0",
+    "Author": "Zhixian Ong"
+  }
 }
