--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,9 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Zx custom
+ako.ps1
+*.test.ps1
+*secrets.json
+MyRef-*
