add serilog logging

--- a/Dn6Poc.TravalApi/appsettings.json
+++ b/Dn6Poc.TravalApi/appsettings.json
@@ -10,5 +10,44 @@
     "Name": "TravelApi",
     "Version": "1.0.0",
     "Author": "Zhixian Ong"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+        "Default": "Verbose",
+        "Override": {
+            "Microsoft.AspNetCore.DataProtection": "Information",
+            "Microsoft.AspNetCore.Mvc.Internal": "Information",
+            "Microsoft.Extensions": "Information",
+            "Microsoft": "Information",
+            "System": "Information"
+        }
+    },
+    "WriteTo": [
+        {
+            "Name": "Console",
+            "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
+        },
+        {
+            "Name": "File",
+            "Args": {
+                "path": "./logs/travel-api-.log",
+                "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+                "rollingInterval": "Day",
+                "retainedFileCountLimit": 90,
+                "fileSizeLimitBytes": 104857600,
+                "rollOnFileSizeLimit": true,
+                "shared": true,
+                "flushToDiskInterval": "00:00:01"
+            }
+        }
+    ],
+    "Destructure": [],
+    "Enrich": [
+        "FromLogContext"
+    ],
+    "Properties": {
+        "Application": "WebApp"
+    }
   }
 }
