--- a/Dn6Poc.TravalApi/appsettings.json
+++ b/Dn6Poc.TravalApi/appsettings.json
@@ -49,5 +49,9 @@
     "Properties": {
         "Application": "WebApp"
     }
+  },
+  "Settings": {
+    "Setting1": "Setting1 content",
+    "Setting2": "Setting2 content"
   }
 }
