add kestrel to travel-api appsettings.json

--- a/Dn6Poc.TravalApi/appsettings.json
+++ b/Dn6Poc.TravalApi/appsettings.json
@@ -6,10 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-  "Application": {
-    "Name": "TravelApi",
-    "Version": "1.0.0",
-    "Author": "Zhixian Ong"
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
@@ -49,6 +54,11 @@
     "Properties": {
         "Application": "WebApp"
     }
+  },
+  "Application": {
+    "Name": "TravelApi",
+    "Version": "1.0.0",
+    "Author": "Zhixian Ong"
   },
   "Settings": {
     "Setting1": "Setting1 content",
