--- a/Dn6Poc.CountryApi/appsettings.json
+++ b/Dn6Poc.CountryApi/appsettings.json
@@ -17,47 +17,68 @@
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": {
-        "Default": "Verbose",
-        "Override": {
-            "Microsoft.AspNetCore.DataProtection": "Information",
-            "Microsoft.AspNetCore.Mvc.Internal": "Information",
-            "Microsoft.Extensions": "Information",
-            "Microsoft": "Information",
-            "System": "Information"
-        }
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft.AspNetCore.DataProtection": "Information",
+        "Microsoft.AspNetCore.Mvc.Internal": "Information",
+        "Microsoft.Extensions": "Information",
+        "Microsoft": "Information",
+        "System": "Information"
+      }
     },
     "WriteTo": [
-        {
-            "Name": "Console",
-            "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
-        },
-        {
-            "Name": "File",
-            "Args": {
-                "path": "./logs/country-api-.log",
-                "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
-                "rollingInterval": "Day",
-                "retainedFileCountLimit": 90,
-                "fileSizeLimitBytes": 104857600,
-                "rollOnFileSizeLimit": true,
-                "shared": true,
-                "flushToDiskInterval": "00:00:01"
-            }
+      {
+        "Name": "Console",
+        "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/country-api-.log",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 90,
+          "fileSizeLimitBytes": 104857600,
+          "rollOnFileSizeLimit": true,
+          "shared": true,
+          "flushToDiskInterval": "00:00:01"
         }
+      }
     ],
     "Destructure": [],
     "Enrich": [
-        "FromLogContext"
+      "FromLogContext"
     ],
     "Properties": {
-        "Application": "Country API"
+      "Application": "Country API"
     }
   },
   "Application": {
     "Name": "Country API",
     "Version": "1.0.0",
     "Author": "Zhixian Ong"
+  },
+  "Swagger": {
+    "OpenApiInfo": {
+      "Title": "Country API",
+      "Description": "Manages country list",
+      "Version": "v1",
+      "TermsOfService": "http://localhost:7000/terms.html",
+      "Contact": {
+        "Name": "Contact",
+        "Url": "http://localhost:7000/contact.html"
+      },
+      "License": {
+        "Name": "License",
+        "Url": "http://localhost:7000/license.html"
+      },
+      "Extensions": {}
+    }
+
   }
 }
