--- a/Dn6Poc.DocuMgmtPortal/appsettings.json
+++ b/Dn6Poc.DocuMgmtPortal/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:59921",
+    "ValidAudience": "https://localhost:7241/",
+    "ValidIssuer": "https://localhost:7241/",
     "Secret": "secret09172301287"
   }
 }
