Add application config

--- a/Dn6Poc.DocuMgmtPortal/appsettings.json
+++ b/Dn6Poc.DocuMgmtPortal/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "Application": {
+    "Name": "DocuPortal"
+  },
   "JWT": {
     "ValidAudience": "https://localhost:7241/",
     "ValidIssuer": "https://localhost:7241/",
