add cookies settings

--- a/Dn6Poc.DocuMgmtPortal/appsettings.json
+++ b/Dn6Poc.DocuMgmtPortal/appsettings.json
@@ -8,6 +8,33 @@
   "AllowedHosts": "*",
   "Application": {
     "Name": "DocuPortal"
+
+  },
+  "Cookies": {
+    "AntiForgery": {
+      "Name": "DocuPortal.AntiForgery",
+      "Domain": "",
+      "Path": "/",
+      "HttpOnly": true,
+      "Secure": false,
+      "SameSite": "Strict"
+    },
+    "aspnetCore_session": {
+      "Name": "xxxaspnetCore_session",
+      "Domain": "",
+      "Path": "/",
+      "HttpOnly": true,
+      "Secure": false,
+      "SameSite": "Strict"
+    },
+    "AuthSession": {
+      "Name": "xxxAuthSession",
+      "Domain": "",
+      "Path": "/",
+      "HttpOnly": true,
+      "Secure": false,
+      "SameSite": "Strict"
+    }
   },
   "JWT": {
     "ValidAudience": "https://localhost:7241/",
