--- a/Dn6Poc.DocuMgmtPortal/appsettings.Development.json
+++ b/Dn6Poc.DocuMgmtPortal/appsettings.Development.json
@@ -4,7 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.Hosting": "Information",
-      "System.Net.Http.HttpClient": "Information"
+      "System.Net.Http.HttpClient": "Trace"
     }
   }
 }
