--- a/Dn6Poc.DocuMgmtPortal/Dn6Poc.DocuMgmtPortal.csproj
+++ b/Dn6Poc.DocuMgmtPortal/Dn6Poc.DocuMgmtPortal.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Responses\" />
+    <Folder Include="Models\Requests\" />
+  </ItemGroup>
+
 </Project>
