--- a/Dn6Poc.DocuMgmtPortal/appsettings.json
+++ b/Dn6Poc.DocuMgmtPortal/appsettings.json
@@ -36,6 +36,58 @@
       "SameSite": "Strict"
     }
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:7000"
+      },
+      "Https": {
+        "Url": "https://localhost:7001"
+      }
+    }
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft.AspNetCore.DataProtection": "Information",
+        "Microsoft.AspNetCore.Mvc.Internal": "Information",
+        "Microsoft.Extensions": "Information",
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/country-api-.log",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 90,
+          "fileSizeLimitBytes": 104857600,
+          "rollOnFileSizeLimit": true,
+          "shared": true,
+          "flushToDiskInterval": "00:00:01"
+        }
+      }
+    ],
+    "Destructure": [],
+    "Enrich": [
+      "FromLogContext"
+    ],
+    "Properties": {
+      "Application": "Country API"
+    }
+  },
   "JWT": {
     "ValidAudience": "https://localhost:7241/",
     "ValidIssuer": "https://localhost:7241/",
