--- a/Dn6Poc.DocuMgmtPortal/Dn6Poc.DocuMgmtPortal.csproj
+++ b/Dn6Poc.DocuMgmtPortal/Dn6Poc.DocuMgmtPortal.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1cc30cec-d6df-4051-b020-28b9fa85a863</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
