add kestrel config to development

--- a/Dn6Poc.DocuMgmtPortal/appsettings.Development.json
+++ b/Dn6Poc.DocuMgmtPortal/appsettings.Development.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting": "Information",
       "System.Net.Http.HttpClient": "Trace"
     }
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:7240"
+      },
+      "Https": {
+        "Url": "https://localhost:7241"
+      }
+    }
   }
 }
