--- a/Dn6Poc.DocuMgmtPortal/Dn6Poc.DocuMgmtPortal.csproj
+++ b/Dn6Poc.DocuMgmtPortal/Dn6Poc.DocuMgmtPortal.csproj
@@ -13,8 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Responses\" />
-    <Folder Include="Models\Requests\" />
+    <Folder Include="Api\Responses\" />
   </ItemGroup>
 
 </Project>
