--- a/Dn6Poc.DocuMgmtPortal/appsettings.json
+++ b/Dn6Poc.DocuMgmtPortal/appsettings.json
@@ -7,8 +7,9 @@
   },
   "AllowedHosts": "*",
   "Application": {
-    "Name": "DocuPortal"
-
+    "Name": "DocuPortal",
+    "Version": "1.0.0",
+    "EnableHttpLogging": true
   },
   "Cookies": {
     "AntiForgery": {
@@ -86,6 +87,23 @@
     ],
     "Properties": {
       "Application": "Country API"
+    }
+  },
+  "Swagger": {
+    "OpenApiInfo": {
+      "Title": "DocuPortal API",
+      "Description": "Document Portal API",
+      "Version": "1.0.0",
+      "TermsOfService": "http://localhost:7000/terms.html",
+      "Contact": {
+        "Name": "Contact",
+        "Url": "http://localhost:7000/contact.html"
+      },
+      "License": {
+        "Name": "License",
+        "Url": "http://localhost:7000/license.html"
+      },
+      "Extensions": {}
     }
   },
   "JWT": {
