add additional unit and integration folders to specflow project

--- a/Dn6Poc.DocuMgmtPortal.Tests/Dn6Poc.DocuMgmtPortal.Tests.csproj
+++ b/Dn6Poc.DocuMgmtPortal.Tests/Dn6Poc.DocuMgmtPortal.Tests.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <Folder Include="Drivers\" />
+    <Folder Include="Integration\" />
+    <Folder Include="Unit\" />
     <Folder Include="Support\" />
   </ItemGroup>
 
