--- a/Dn6Poc.DocuMgmtPortal/Dn6Poc.DocuMgmtPortal.csproj
+++ b/Dn6Poc.DocuMgmtPortal/Dn6Poc.DocuMgmtPortal.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
   </ItemGroup>
 
   <ItemGroup>
