--- a/Dn6Poc.DocuMgmtPortal/appsettings.json
+++ b/Dn6Poc.DocuMgmtPortal/appsettings.json
@@ -106,6 +106,11 @@
       "Extensions": {}
     }
   },
+  "Api": {
+    "CommonApi": {
+      "ServerUrl": "https://localhost:7241"
+    }
+  },
   "JWT": {
     "ValidAudience": "https://localhost:7241/",
     "ValidIssuer": "https://localhost:7241/",
