add logging notes

--- a/Dn6Poc.DocuMgmtPortal/appsettings.json
+++ b/Dn6Poc.DocuMgmtPortal/appsettings.json
@@ -9,7 +9,7 @@
   "Application": {
     "Name": "DocuPortal",
     "Version": "1.0.0",
-    "EnableHttpLogging": true
+    "EnableHttpLogging": false
   },
   "Cookies": {
     "AntiForgery": {
