add testing reference

--- a/Dn6Poc.DocuMgmtPortal.Tests/Dn6Poc.DocuMgmtPortal.Tests.csproj
+++ b/Dn6Poc.DocuMgmtPortal.Tests/Dn6Poc.DocuMgmtPortal.Tests.csproj
@@ -22,4 +22,8 @@
     <Folder Include="Support\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dn6Poc.DocuMgmtPortal\Dn6Poc.DocuMgmtPortal.csproj" />
+  </ItemGroup>
+
 </Project>
