--- a/Dn6Poc.DocuMgmtPortal.Tests/Dn6Poc.DocuMgmtPortal.Tests.csproj
+++ b/Dn6Poc.DocuMgmtPortal.Tests/Dn6Poc.DocuMgmtPortal.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
     <PackageReference Include="SpecFlow.MsTest" Version="3.9.40" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
@@ -17,9 +18,6 @@
 
   <ItemGroup>
     <Folder Include="Drivers\" />
-    <Folder Include="Integration\" />
-    <Folder Include="Unit\" />
-    <Folder Include="Support\" />
   </ItemGroup>
 
   <ItemGroup>
