--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,8 +25,8 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal --filter FullyQualifiedName!~Dn6Poc.DocuMgmtPortal.E2ETests
+    # - name: Test
+    #   run: dotnet test --no-build --verbosity normal --filter FullyQualifiedName!~Dn6Poc.DocuMgmtPortal.E2ETests
 
     # Everything looks OK; Now make release build  
     - name: 'Build (Release)'
